src/objects/CSI_Record__c.object
<CustomObject>
    <fields>
        <fullName>Transaction_type__c</fullName>
        <description>Please Enter the Transaction type</description>
        <inlineHelpText>Please Enter the Transaction type</inlineHelpText>
        <label>Transaction type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_if_Anything_could_we_do_to_Improve__c</fullName>
        <description>Finally, please could you provide any feedback on anything you feel we could do to improve the service we offered to you during your Home Purchase with IBB?</description>
        <inlineHelpText>Finally, please could you provide any feedback on anything you feel we could do to improve the service we offered to you during your Home Purchase with IBB?</inlineHelpText>
        <label>What if Anything could we do to Improve</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Where_were_you_last_served__c</fullName>
        <label>Where were you last served?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call Centre</fullName>
                </value>
                <value>
                    <fullName>East Ham</fullName>
                </value>
                <value>
                    <fullName>Edgware Road</fullName>
                </value>
                <value>
                    <fullName>Leicester</fullName>
                </value>
                <value>
                    <fullName>Manchester</fullName>
                </value>
                <value>
                    <fullName>Small Heath</fullName>
                </value>
                <value>
                    <fullName>Southall</fullName>
                </value>
                <value>
                    <fullName>Whitechapel</fullName>
                </value>
                <value>
                    <fullName>HPP Survey</fullName>
                </value>
                <value>
                    <fullName>Premier Banking Survey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Would_you_be_likely_to_recommend_our_HPP__c</fullName>
        <description>Based upon your experience with IBB how likely would you be to recommend our Home Purchase Plan to friends and family/others?</description>
        <inlineHelpText>Based upon your experience with IBB how likely would you be to recommend our Home Purchase Plan to friends and family/others?</inlineHelpText>
        <label>Would you be likely to recommend our HPP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Recommend</fullName>
                </value>
                <value>
                    <fullName>Recommend</fullName>
                </value>
                <value>
                    <fullName>Would Not Recommend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Would_you_refer_IBB_to_Friends_Family__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Would you refer IBB to Friends &amp; Family?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rate_the_level_of_Service_from_Solicitor__c</fullName>
        <description>How would you rate the level of service provided to you by the Solicitors dealing with your Home Purchase?</description>
        <inlineHelpText>How would you rate the level of service provided to you by the Solicitors dealing with your Home Purchase?</inlineHelpText>
        <label>rate the level of Service from Solicitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Satisfied</fullName>
                </value>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Disatisfied</fullName>
                </value>
                <value>
                    <fullName>Very Disatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>recommendation_points__c</fullName>
        <formula>CASE(     Would_you_be_likely_to_recommend_our_HPP__c , &quot;Would Not recommend&quot;,5.55,&quot;Recommend&quot;,11.1,&quot;Strongly Recommend&quot;,16.66,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>recommendation points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>CSI Record</label>
    <nameField>
        <displayFormat>CSI{000}</displayFormat>
        <label>CSI Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSI Records</pluralLabel>
    <recordTypes>
        <fullName>HPP_Survey</fullName>
        <active>true</active>
        <description>New HPP survey, August 2014</description>
        <label>HPP Survey</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_CSI_Record</fullName>
        <active>true</active>
        <description>Standard CSI form</description>
        <label>Standard CSI Record</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Q11_is_1_Q11a_must_be_answered</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Q11__c ,&quot;Totally failed to meet expectations&quot;) , ISBLANK(Q11a__c ))</errorConditionFormula>
        <errorDisplayField>Q11a__c</errorDisplayField>
        <errorMessage>The customer has answered 1,2 or 3 for Q11, Q11a must be answered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Q11_is_2_Q11a_must_be_answered</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Q11__c ,&quot;Failed to meet expectations&quot;) , ISBLANK(Q11a__c ))</errorConditionFormula>
        <errorDisplayField>Q11a__c</errorDisplayField>
        <errorMessage>The customer has answered 1,2 or 3 for Q11, Q11a must be answered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Q11_is_3_Q11a_must_be_answered</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Q11__c ,&quot;Unsure&quot;) , ISBLANK(Q11a__c ))</errorConditionFormula>
        <errorDisplayField>Q11a__c</errorDisplayField>
        <errorMessage>The customer has answered 1,2 or 3 for Q11, Q11a must be answered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Q19_is_1_Q19a_must_be_answered</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Q19__c ,&quot;Totally failed to meet expectations&quot;) , ISBLANK(Q19a__c ))</errorConditionFormula>
        <errorDisplayField>Q19a__c</errorDisplayField>
        <errorMessage>The customer has answered 1,2 or 3 for Q19, Q19a must be answered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Q19_is_2_Q19a_must_be_answered</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Q19__c ,&quot;Failed to meet expectations&quot;) , ISBLANK(Q19a__c ))</errorConditionFormula>
        <errorDisplayField>Q19a__c</errorDisplayField>
        <errorMessage>The customer has answered 1,2 or 3 for Q19, Q19a must be answered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Q19_is_3_Q19a_must_be_answered</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Q19__c ,&quot;Unsure&quot;) , ISBLANK(Q19a__c ))</errorConditionFormula>
        <errorDisplayField>Q19a__c</errorDisplayField>
        <errorMessage>The customer has answered 1,2 or 3 for Q19, Q19a must be answered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Q1_is_yes_Q10_must_be_answered</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Q1__c ,&quot;Yes&quot;) , ISBLANK(TEXT (Q10__c )))</errorConditionFormula>
        <errorDisplayField>Q10__c</errorDisplayField>
        <errorMessage>The customer has answered yes to Q1, Q10 must be answered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Q1_is_yes_Q18_must_be_answered</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Q1__c ,&quot;Yes&quot;) , ISBLANK(TEXT (Q18__c )))</errorConditionFormula>
        <errorDisplayField>Q18__c</errorDisplayField>
        <errorMessage>The customer has answered yes to Q1, Q18 must be answered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Q1_is_yes_Q22_must_be_answered</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Q1__c ,&quot;Yes&quot;) , ISBLANK(TEXT (Q22__c )))</errorConditionFormula>
        <errorDisplayField>Q22__c</errorDisplayField>
        <errorMessage>The customer has answered yes to Q1, Q22 must be answered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Q1_is_yes_Q5_must_be_answered</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Q1__c ,&quot;Yes&quot;) , ISBLANK(TEXT (Q5__c )))</errorConditionFormula>
        <errorDisplayField>Q5__c</errorDisplayField>
        <errorMessage>The customer has answered yes to Q1, Q5 must be answered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Q20_is_yes_Q20a_must_be_answered</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Q20__c ,&quot;Yes&quot;) , ISBLANK(Q20a__c))</errorConditionFormula>
        <errorDisplayField>Q20a__c</errorDisplayField>
        <errorMessage>The customer has answered yes to Q20, Q20a must be answered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Q4_is_0_Q4ab_must_be_answered</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Q4__c ,&quot;0&quot;) , ISBLANK(Q4a__c ))</errorConditionFormula>
        <errorDisplayField>Q4a__c</errorDisplayField>
        <errorMessage>The customer has answered 0-5 for Q4, Q4a and Q4b must be answered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Q4_is_1_Q4ab_must_be_answered</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Q4__c ,&quot;1&quot;) , ISBLANK(Q4a__c ))</errorConditionFormula>
        <errorDisplayField>Q4a__c</errorDisplayField>
        <errorMessage>The customer has answered 0-5 for Q4, Q4a and Q4b must be answered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Q4_is_2_Q4ab_must_be_answered</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Q4__c ,&quot;2&quot;) , ISBLANK(Q4a__c ))</errorConditionFormula>
        <errorDisplayField>Q4a__c</errorDisplayField>
        <errorMessage>The customer has answered 0-5 for Q4, Q4a and Q4b must be answered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Q4_is_3_Q4ab_must_be_answered</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Q4__c ,&quot;3&quot;) , ISBLANK(Q4a__c ))</errorConditionFormula>
        <errorDisplayField>Q4a__c</errorDisplayField>
        <errorMessage>The customer has answered 0-5 for Q4, Q4a and Q4b must be answered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Q4_is_4_Q4ab_must_be_answered</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Q4__c ,&quot;4&quot;) , ISBLANK(Q4a__c ))</errorConditionFormula>
        <errorDisplayField>Q4a__c</errorDisplayField>
        <errorMessage>The customer has answered 0-5 for Q4, Q4a and Q4b must be answered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Q4_is_5_Q4ab_must_be_answered</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Q4__c ,&quot;5&quot;) , ISBLANK(Q4a__c ))</errorConditionFormula>
        <errorDisplayField>Q4a__c</errorDisplayField>
        <errorMessage>The customer has answered 0-5 for Q4, Q4a and Q4b must be answered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Q9ab_is_0_Q9c_must_be_answered</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Q9a__c ,&quot;0&quot;) , ISBLANK(Q9c__c ))</errorConditionFormula>
        <errorDisplayField>Q9c__c</errorDisplayField>
        <errorMessage>The customer has answered 0-5 for Q9a or Q9b, Q9c must be answered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Q9ab_is_1_Q9c_must_be_answered</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Q9a__c ,&quot;1&quot;) , ISBLANK(Q9c__c ))</errorConditionFormula>
        <errorDisplayField>Q9c__c</errorDisplayField>
        <errorMessage>The customer has answered 0-5 for Q9a or Q9b, Q9c must be answered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Q9ab_is_2_Q9c_must_be_answered</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Q9a__c ,&quot;2&quot;) , ISBLANK(Q9c__c ))</errorConditionFormula>
        <errorDisplayField>Q9c__c</errorDisplayField>
        <errorMessage>The customer has answered 0-5 for Q9a or Q9b, Q9c must be answered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Q9ab_is_3_Q9c_must_be_answered</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Q9a__c ,&quot;3&quot;) , ISBLANK(Q9c__c ))</errorConditionFormula>
        <errorDisplayField>Q9c__c</errorDisplayField>
        <errorMessage>The customer has answered 0-5 for Q9a or Q9b, Q9c must be answered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Q9ab_is_4_Q9c_must_be_answered</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Q9a__c ,&quot;4&quot;) , ISBLANK(Q9c__c ))</errorConditionFormula>
        <errorDisplayField>Q9c__c</errorDisplayField>
        <errorMessage>The customer has answered 0-5 for Q9a or Q9b, Q9c must be answered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Q9ab_is_5_Q9c_must_be_answered</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Q9a__c ,&quot;5&quot;) , ISBLANK(Q9c__c ))</errorConditionFormula>
        <errorDisplayField>Q9c__c</errorDisplayField>
        <errorMessage>The customer has answered 0-5 for Q9a or Q9b, Q9c must be answered</errorMessage>
    </validationRules>
</CustomObject>